--- a/Day01-15/04.循环结构.md
+++ b/Day01-15/04.循环结构.md
@@ -111,7 +111,7 @@ Author: 骆昊
 for i in range(1, 10):
     for j in range(1, i + 1):
         print('%d*%d=%d' % (i, j, i * j), end='\t')
-    print()
+    print()   '''print()的目的是换行，print()默认end='\n'，即换行'''
 ```
 
 ### 练习
